SVN
---

XML:   Resolved issue CASTOR-1850 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Refactored toString() method of XMLException.
       Details: http://jira.codehaus.org/browse/CASTOR-1850
       (Werner - 20070515)
       
XML:   Resolved issue CASTOR-1769 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added get-/setProperty() methods to (un-)Marshaller so that properties can be set programmatically.
       Details: http://jira.codehaus.org/browse/CASTOR-1769
       (Werner - 20070515)

XML:   Resolved issue CASTOR-1982 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed a problem with namespace processing in the context of substitution groups.
       Details: http://jira.codehaus.org/browse/CASTOR-1982
       (Werner - 20070514)

XML:   Resolved issue CASTOR-1981 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed a problem with the processing of substitution groups if sequence order validation enabled.
       Details: http://jira.codehaus.org/browse/CASTOR-1981
       (Werner - 20070514)

XML:   Resolved issue CASTOR-1971 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Made org.exolab.castor.persists.spi.Identity implement java.io.Serializable.
       Details: http://jira.codehaus.org/browse/CASTOR-1971
       (Werner - 20070509)

XML:   Resolved issue CASTOR-1964 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with picking up SAX features from custom castor.properties.
       Details: http://jira.codehaus.org/browse/CASTOR-1964
       (Werner - 200705056)

XML:   Resolved issue CASTOR-1896 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Introduced new 'lenient' properties in castor.properties so that new sequence order and id/href
       validation can be selectively turned off.
       Details: http://jira.codehaus.org/browse/CASTOR-1962