@@ -1,6 +1,11 @@
 SVN
 ---
 
+XML:   Resolved issue CASTOR-1855 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Trace statements output only if in trace mode.
+       Details: http://jira.codehaus.org/browse/CASTOR-1855
+       (Werner - 20070524)
+       
 XML:   Resolved issue CASTOR-1850 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Refactored toString() method of XMLException.
        Details: http://jira.codehaus.org/browse/CASTOR-1850
